# chat-flame-backend

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  chat-ui.env  config.yml  crates.js  docker-compose.yml  help.html  search-index.js  settings.html  src-files.js  test.py
.github/: FUNDING.yml
.github/workflows/: coverage.yml  docker-publish.yml  docs.yml  rust.yml
chat_flame_backend/: all.html  index.html  sidebar-items.js
chat_flame_backend/api/: index.html  sidebar-items.js
chat_flame_backend/api/model/: enum.FinishReason.html  index.html  sidebar-items.js  struct.BestOfSequence.html  struct.CompatGenerateRequest.html  struct.Details.html  struct.ErrorResponse.html  struct.GenerateParameters.html  struct.GenerateRequest.html  struct.GenerateResponse.html  struct.Info.html  struct.PrefillToken.html  struct.StreamDetails.html  struct.StreamResponse.html  struct.Token.html
chat_flame_backend/api/openapi/: index.html  sidebar-items.js  struct.ApiDoc.html
chat_flame_backend/api/routes/: index.html  sidebar-items.js
chat_flame_backend/config/: fn.load_config.html  index.html  sidebar-items.js  struct.Config.html
chat_flame_backend/llm/: enum.FinishReason.html  enum.Model.html  fn.create_model.html  fn.create_text_generation.html  fn.create_tokenizer.html  index.html  sidebar-items.js  struct.TextGeneration.html
chat_flame_backend/llm/generate_parameter/: index.html  sidebar-items.js  struct.GenerateParameter.html
chat_flame_backend/llm/loader/: fn.create_model.html  fn.create_tokenizer.html  index.html  sidebar-items.js
chat_flame_backend/llm/model_processor/: index.html  sidebar-items.js  struct.DummyModelProcessor.html  trait.ModelProcessor.html
chat_flame_backend/llm/models/: enum.Models.html  index.html  sidebar-items.js
chat_flame_backend/llm/sampler/: index.html  sidebar-items.js  struct.DummySampler.html  trait.Sampler.html
chat_flame_backend/llm/text_generation/: fn.create_text_generation.html  index.html  sidebar-items.js  struct.TextGeneration.html
chat_flame_backend/llm/text_generator/: enum.TextGeneratorResult.html  index.html  sidebar-items.js  struct.TextGenerator.html  trait.TextGeneratorTrait.html  type.TextProbability.html
chat_flame_backend/llm/token_generator/: enum.TokenGeneratorResult.html  index.html  sidebar-items.js  struct.TokenGenerator.html  trait.TokenGeneratorTrait.html  type.TokenProbability.html
chat_flame_backend/server/: fn.server.html  index.html  sidebar-items.js  struct.AppState.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/utoipa/: trait.OpenApi.js  trait.ToSchema.js
src/: config.rs  lib.rs  main.rs  server.rs
src/api/: generate.rs  generate_parameters.rs  generate_stream.rs  generate_text.rs  health.rs  info.rs  mod.rs  openapi.rs  stream_response.rs
src/chat_flame_backend/: config.rs.html  lib.rs.html  server.rs.html
src/llm/: dummy_text_generator.rs  generate_parameter.rs  loader.rs  mod.rs  model_processor.rs  sampler.rs  text_generation.rs  text_generator.rs  token_generator.rs  token_output_stream.rs
tests/: server_test.rs
trait.impl/utoipa/: trait.ToSchema.js
type.impl/std/: primitive.tuple.js
(+86 files in other folders)
