[package]
name = "chat-flame-backend"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["chriamue@gmail.com"]
license = "MIT"
repository = "https://github.com/chriamue/chat-flame-backend"
description = "ChatFlameBackend is an innovative backend solution for chat applications, leveraging the power of the Candle AI framework with a focus on the Mistral model"
keywords = ["chat", "backend", "candle", "ai", "mistral"]

[[bin]]
name = "chat-flame-backend"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.7"
candle-core = "0.3.1"
candle-examples = "0.3.1"
candle-transformers = "0.3.1"
futures = "0.3.29"
hf-hub = { version = "0.3.1", features = ["tokio"] }
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
structopt = "0.3.26"
tokenizers = { version = "0.13.4", default-features = false, features = [
    "onig",
] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
utoipa = { version = "4.1.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "5", features = ["axum"] }
